# iroh-workshop-omniopencon2025

./: Cargo.toml  README.md
echo1/: Cargo.toml
echo1/src/: main.rs  util.rs
echo2/: Cargo.toml
echo2/src/: echo.rs  main.rs  util.rs
echo3/: Cargo.toml
echo3/src/: echo.rs  main.rs  util.rs
sendme1/: Cargo.toml
sendme1/src/: main.rs  util.rs
sendme2/: Cargo.toml
sendme2/src/: main.rs  util.rs
sendme3/: Cargo.toml
sendme3/src/: main.rs  util.rs
sendme4/: Cargo.toml
sendme4/src/: main.rs  util.rs
