[package]
name = "echo3"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { version = "0.91.1", features = ["metrics", "discovery-pkarr-dht"] }
iroh-base = { version = "0.91.1" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
rand = "0.8.5"
zbase32 = "0.1.2"
hex = "0.4.3"
n0-future = "0.1.3"
